--- a/src/test/resources/global.properties
+++ b/src/test/resources/global.properties
@@ -1,11 +1,13 @@
 #supported browsers: chrome, firefox, edge
 browser=chrome
 #environments are: dev, stage, prod. Case insensitive
-environment=stage
+environment=test
 
-user=practice01@mailinator.com
-password=practice01!
+user=username
+password=password!
 
-devURL=https://play.idealforliving.com/
-stgURL=https://staging.knitware.com/
-prdURL=https://knitware.com/
+devURL=https://dev.url.com/
+stgURL=https://staging.url.com/
+prdURL=https://prod.url.com/
+
+testSpeed=1000
