--- a/pom.xml
+++ b/pom.xml
@@ -9,31 +9,31 @@
 	<dependency>
 	    <groupId>io.cucumber</groupId>
 	    <artifactId>cucumber-java</artifactId>
-	    <version>7.14.0</version>
+	    <version>7.18.0</version>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-testng -->
 	<dependency>
 	    <groupId>io.cucumber</groupId>
 	    <artifactId>cucumber-testng</artifactId>
-	    <version>7.14.0</version>
+	    <version>7.18.0</version>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
 	<dependency>
 	    <groupId>org.seleniumhq.selenium</groupId>
 	    <artifactId>selenium-java</artifactId>
-	    <version>4.13.0</version>
+	    <version>4.21.0</version>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-picocontainer -->
 	<dependency>
 	    <groupId>io.cucumber</groupId>
 	    <artifactId>cucumber-picocontainer</artifactId>
-	    <version>7.14.0</version>
+	    <version>7.18.0</version>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
 	<dependency>
 	    <groupId>commons-io</groupId>
 	    <artifactId>commons-io</artifactId>
-	    <version>2.14.0</version>
+	    <version>2.16.1</version>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/tech.grasshopper/extentreports-cucumber7-adapter -->
 	<dependency>
@@ -47,6 +47,14 @@
 	    <artifactId>extentreports</artifactId>
 	    <version>5.1.1</version>
 	</dependency>
+	  <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
+	  <dependency>
+		  <groupId>org.slf4j</groupId>
+		  <artifactId>slf4j-simple</artifactId>
+		  <version>2.0.13</version>
+		  <scope>test</scope>
+	  </dependency>
+
 
   </dependencies>
 </project>
